criando sistema de rooms e mudando sistema de waves